--- a/mosquitto_subscriber.ipynb
+++ b/mosquitto_subscriber.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a6e85de4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-04T19:27:10.913715Z",
-     "start_time": "2024-03-04T19:27:04.855350Z"
+     "start_time": "2024-03-04T20:49:30.884Z"
     }
    },
    "outputs": [
@@ -15,20 +14,124 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Broker granted the following QoS: 0\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 43>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     41\u001b[0m mqttc\u001b[38;5;241m.\u001b[39muser_data_set([])\n\u001b[1;32m     42\u001b[0m mqttc\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m192.168.178.37\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 43\u001b[0m \u001b[43mmqttc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloop_forever\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReceived the following message: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmqttc\u001b[38;5;241m.\u001b[39muser_data_get()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/fai/lib/python3.10/site-packages/paho/mqtt/client.py:2291\u001b[0m, in \u001b[0;36mClient.loop_forever\u001b[0;34m(self, timeout, retry_first_connection)\u001b[0m\n\u001b[1;32m   2289\u001b[0m rc \u001b[38;5;241m=\u001b[39m MQTTErrorCode\u001b[38;5;241m.\u001b[39mMQTT_ERR_SUCCESS\n\u001b[1;32m   2290\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m rc \u001b[38;5;241m==\u001b[39m MQTTErrorCode\u001b[38;5;241m.\u001b[39mMQTT_ERR_SUCCESS:\n\u001b[0;32m-> 2291\u001b[0m     rc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2292\u001b[0m     \u001b[38;5;66;03m# We don't need to worry about locking here, because we've\u001b[39;00m\n\u001b[1;32m   2293\u001b[0m     \u001b[38;5;66;03m# either called loop_forever() when in single threaded mode, or\u001b[39;00m\n\u001b[1;32m   2294\u001b[0m     \u001b[38;5;66;03m# in multi threaded mode when loop_stop() has been called and\u001b[39;00m\n\u001b[1;32m   2295\u001b[0m     \u001b[38;5;66;03m# so no other threads can access _out_packet or _messages.\u001b[39;00m\n\u001b[1;32m   2296\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_thread_terminate \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m   2297\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_out_packet) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m   2298\u001b[0m             \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_out_messages) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m):\n",
-      "File \u001b[0;32m~/anaconda3/envs/fai/lib/python3.10/site-packages/paho/mqtt/client.py:1657\u001b[0m, in \u001b[0;36mClient._loop\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1654\u001b[0m     rlist \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sock, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sockpairR]\n\u001b[1;32m   1656\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1657\u001b[0m     socklist \u001b[38;5;241m=\u001b[39m \u001b[43mselect\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrlist\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwlist\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1658\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   1659\u001b[0m     \u001b[38;5;66;03m# Socket isn't correct type, in likelihood connection is lost\u001b[39;00m\n\u001b[1;32m   1660\u001b[0m     \u001b[38;5;66;03m# ... or we called disconnect(). In that case the socket will\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1663\u001b[0m     \u001b[38;5;66;03m# rc != MQTT_ERR_SUCCESS and we don't want state to change from\u001b[39;00m\n\u001b[1;32m   1664\u001b[0m     \u001b[38;5;66;03m# mqtt_cs_disconnecting.\u001b[39;00m\n\u001b[1;32m   1665\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m (_ConnectionState\u001b[38;5;241m.\u001b[39mMQTT_CS_DISCONNECTING, _ConnectionState\u001b[38;5;241m.\u001b[39mMQTT_CS_DISCONNECTED):\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Broker granted the following QoS: 0\n",
+      "b'Key.left'\n",
+      "b'xcarve_ctl/joystick/cmd'\n",
+      "b'192.168.178.37'\n",
+      "b''\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'xcarve_ctl/joystick/cmd'\n",
+      "b'192.168.178.37'\n",
+      "b''\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'xcarve_ctl/joystick/cmd'\n",
+      "b'192.168.178.37'\n",
+      "b''\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'xcarve_ctl/joystick/cmd'\n",
+      "b'192.168.178.37'\n",
+      "b''\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'xcarve_ctl/joystick/cmd'\n",
+      "b'192.168.178.37'\n",
+      "b''\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'xcarve_ctl/joystick/cmd'\n",
+      "b'192.168.178.37'\n",
+      "b''\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n",
+      "b'Key.left'\n",
+      "b'Key.up'\n",
+      "b'Key.down'\n",
+      "b'Key.right'\n"
      ]
     }
    ],
@@ -54,10 +157,11 @@
     "\n",
     "def on_message(client, userdata, message):\n",
     "    # userdata is the structure we choose to provide, here it's a list()\n",
-    "    userdata.append(message.payload)\n",
+    "    #userdata.append(message.payload)\n",
     "    # We only want to process 10 messages\n",
-    "    if len(userdata) >= 10:\n",
-    "        client.unsubscribe(\"paho/test/topic\")\n",
+    "    #if len(userdata) >= 10:\n",
+    "    #    client.unsubscribe(\"paho/test/topic\")\n",
+    "    print(message.payload)\n",
     "\n",
     "def on_connect(client, userdata, flags, reason_code, properties):\n",
     "    if reason_code.is_failure:\n",
@@ -65,7 +169,7 @@
     "    else:\n",
     "        # we should always subscribe from on_connect callback to be sure\n",
     "        # our subscribed is persisted across reconnections.\n",
-    "        client.subscribe(\"paho/test/topic\")\n",
+    "        client.subscribe(\"xcarve_ctl/joystick/cmd\")\n",
     "\n",
     "mqttc = mqtt.Client(mqtt.CallbackAPIVersion.VERSION2)\n",
     "mqttc.on_connect = on_connect\n",
